--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,36 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300");
+
+:root {
+	/* App Fonts */
+	--font-family: "Roboto Condensed", sans-serif;
+
+	/* App colors */
+	--background-color: hsl(0, 0%, 12%);
+	--font-primary: hsl(0, 0%, 96%);
+	--font-secondary: #181818;
+
+	/* Clock colors */
+	--clockFace-color: hsl(0, 0%, 14%);
+	--clockBorder-color: hsl(0, 0%, 14%, 0.9);
+	--dialLine-disable-color: hsla(0, 100%, 50%, 0.5);
+	--dialLine-mute-color: hsla(0, 0%, 30%, 1);
+	--glow-color: hsla(0, 0%, 98%, 1);
+	--clock-size: 180px;
+
+	/* Color set */
+	--hValue: 0;
+
+	/* Glow colors */
+	--red: 0;
+	--orange: 30;
+	--yellow: 60;
+	--green: 120;
+	--teal: 170;
+	--blue: 230;
+	--purple: 270;
+	--magenta: 320;
+}
+
 body {
-	font-family: "Roboto Condensed", sans-serif;
+	background-color: var(--background-color);
 }
