--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,56 @@
-:root {
-	/* App colors */
-	--background-color: #1f1f1f;
-	--font-primary: #f8f8f8;
-	--font-secondary: #181818;
-	/* Clock colors */
-	--clockFace-color: hsl(0, 0%, 20%);
-	--clockBorder-color: hsl(0, 0%, 14%, 0.9);
-	--dialLine-disable-color: hsla(0, 82%, 50%, 0.3);
-	--dialLine-mute-color: hsla(0, 0%, 90%, 0.3);
-	--dialLine-glow-color: hsla(0, 0%, 99%, 0.9);
-	--clock-size: 180px;
-}
+.app-container {
+	--border-width: 3px;
 
-@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300");
-
-.container {
-	padding: 12px 22px;
+	font-family: var(--font-family);
+	position: relative;
+	margin: var(--border-width);
+	padding: 12px 22px 14px;
+	min-height: 200px;
 	background-color: var(--background-color);
-	height: 200px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	border-radius: var(--border-width);
+}
+
+.app-container::before {
+	position: absolute;
+	content: "";
+	z-index: -1;
+	top: calc(-1 * var(--border-width));
+	left: calc(-1 * var(--border-width));
+	width: calc(100% + var(--border-width) * 2);
+	height: calc(100% + var(--border-width) * 2);
+	background: linear-gradient(
+		60deg,
+		hsl(224, 85%, 40%),
+		hsl(270, 85%, 40%),
+		hsl(314, 85%, 40%),
+		hsl(var(--hValue), 0%, 20%),
+		hsl(var(--hValue), 0%, 40%),
+		hsl(var(--hValue), 0%, 60%),
+		hsl(var(--hValue), 0%, 80%),
+		hsl(var(--hValue), 0%, 100%),
+		hsl(var(--hValue), 0%, 80%),
+		hsl(var(--hValue), 0%, 60%),
+		hsl(var(--hValue), 0%, 40%),
+		hsl(var(--hValue), 0%, 20%),
+		hsl(44, 85%, 40%),
+		hsl(89, 85%, 40%),
+		hsl(134, 85%, 40%),
+		hsl(179, 85%, 40%),
+		hsl(var(--hValue), 0%, 10%)
+	);
+	background-size: 300% 300%;
+	background-position: 0 50%;
+	border-radius: calc(2 * var(--border-width));
+	animation: moveGradient 4s alternate infinite;
+}
+
+@keyframes moveGradient {
+	50% {
+		background-position: 100% 50%;
+	}
 }
 
 .clock {
@@ -31,55 +61,60 @@
 	border-radius: 50%;
 	border: 4px solid var(--clockBorder-color);
 	background-color: var(--clockFace-color);
-	box-shadow: 12px -22px 30px hsla(0, 0%, 23%, 0.9),
-		-12px 28px 42px hsla(0, 0%, 0%, 0.9),
-		inset 1px -2px 1px hsla(0, 0%, 28%, 0.8),
-		inset -4px 8px 40px hsl(0, 0%, 0%, 0.9);
+	box-shadow: 12px -12px 36px hsla(0, 0%, 23%, 0.9),
+		-12px 12px 36px hsla(0, 0%, 0%, 0.9),
+		inset 1px -2px 1px hsla(0, 0%, 28%, 0.7),
+		inset -4px 8px 16px hsla(0, 0%, 0%, 0.9);
+}
 
-	& .countdown {
-		position: absolute;
-		z-index: 20;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		color: var(--font-primary);
-		font-size: 68px;
-	}
+.countdown {
+	position: absolute;
+	z-index: 20;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: var(--font-primary);
+	font-size: 68px;
+}
 
-	& .dial-lines {
-		position: relative;
+.dial-lines {
+	position: relative;
+}
 
-		& .dial-line {
-			width: 2px;
-			height: 10px;
-			position: absolute;
-			z-index: 10;
-			left: 50%;
-			transform-origin: 50% calc(var(--clock-size) / 2);
-			margin-left: -1px;
-			transition: background-color 1s, box-shadow 1s;
-			background-color: var(--dialLine-mute-color);
-			&[data-glow="glow"] {
-				background-color: var(--dialLine-glow-color);
-				box-shadow: 0 0 8px var(--dialLine-glow-color);
-			}
-			&[data-glow="disable"] {
-				background-color: var(--dialLine-disable-color);
-			}
-		}
-	}
+.dial-line {
+	width: 3px;
+	height: 5px;
+	border-radius: 3px;
+	position: absolute;
+	z-index: 10;
+	left: 50%;
+	transform-origin: 50% calc(var(--clock-size) / 2);
+	margin-left: -1px;
+	transition: background-color 400ms, box-shadow 400ms, height 400ms;
+	background-color: var(--dialLine-mute-color);
+}
+
+.dial-line[data-glow="glow"] {
+	height: 10px;
+	background-color: var(--glow-color);
+	box-shadow: 0 0 12px var(--glow-color);
+}
+
+.dial-line[data-glow="disable"] {
+	background-color: var(--dialLine-disable-color);
 }
 
 .text {
 	color: var(--font-primary);
 	text-align: center;
+}
 
-	& .mainText {
-		font-size: 5vw;
-	}
-	& .subText {
-		font-size: 3.5vw;
-	}
+.mainText {
+	font-size: 5vw;
+}
+
+.subText {
+	font-size: 3.5vw;
 }
 
 .actions-container {
@@ -99,12 +134,12 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
 
-	&::before {
-		content: "";
-		position: absolute;
-		border-style: solid;
-		border-width: 20px 0 20px 35px;
-		border-color: transparent transparent transparent var(--font-secondary);
-	}
+.playPause::before {
+	content: "";
+	position: absolute;
+	border-style: solid;
+	border-width: 20px 0 20px 35px;
+	border-color: transparent transparent transparent var(--font-secondary);
 }
