--- a/css/base.css
+++ b/css/base.css
@@ -18,7 +18,7 @@
 	--clock-size: 180px;
 
 	/* Color set */
-	--hValue: 0;
+	--HLS-H-Value: 0;
 
 	/* Glow colors */
 	--red: 0;
@@ -32,5 +32,5 @@
 }
 
 body {
-	background-color: var(--background-color);
+	background-color: #141414;
 }
