--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@600&display=swap");
 
 :root {
 	/* App Fonts */
@@ -6,8 +6,8 @@
 
 	/* App colors */
 	--background-color: hsl(0, 0%, 12%);
-	--font-primary: hsl(0, 0%, 96%);
-	--font-secondary: #181818;
+	--font-white: hsl(0, 0%, 96%);
+	--font-black: hsl(0, 0%, 9%);
 
 	/* Clock colors */
 	--clockFace-color: hsl(0, 0%, 14%);
@@ -16,19 +16,6 @@
 	--dialLine-mute-color: hsla(0, 0%, 30%, 1);
 	--glow-color: hsla(0, 0%, 98%, 1);
 	--clock-size: 180px;
-
-	/* Color set */
-	--HLS-H-Value: 0;
-
-	/* Glow colors */
-	--red: 0;
-	--orange: 30;
-	--yellow: 60;
-	--green: 120;
-	--teal: 170;
-	--blue: 230;
-	--purple: 270;
-	--magenta: 320;
 }
 
 body {
