--- a/css/clock.css
+++ b/css/clock.css
@@ -4,10 +4,10 @@
 	height: var(--clock-size);
 	padding: 6px;
 	border-radius: 50%;
-	border: 4px solid var(--clockBorder-color);
+	border: 6px solid var(--clockBorder-color);
 	background-color: var(--clockFace-color);
-	box-shadow: 12px -12px 36px hsla(0, 0%, 23%, 0.9),
-		-12px 12px 36px hsla(0, 0%, 0%, 0.9),
+	box-shadow: 2px -2px 6px hsla(0, 0%, 40%, 0.1),
+		10px -10px 32px hsl(0, 0%, 23%, 0.9), -12px 12px 36px hsla(0, 0%, 0%, 0.9),
 		inset 1px -2px 1px hsla(0, 0%, 28%, 0.7),
 		inset -4px 8px 16px hsla(0, 0%, 0%, 0.9);
 }
@@ -18,7 +18,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	color: var(--font-primary);
+	color: var(--font-white);
 	font-size: 68px;
 }
 
@@ -27,8 +27,8 @@
 }
 
 .dial-line {
-	width: 3px;
-	height: 5px;
+	width: 4px;
+	height: 6px;
 	border-radius: 3px;
 	position: absolute;
 	z-index: 10;
@@ -40,7 +40,7 @@
 }
 
 .dial-line[data-glow="glow"] {
-	height: 10px;
+	height: 12px;
 	background-color: var(--glow-color);
 	box-shadow: 0 0 12px var(--glow-color);
 }
