--- a/css/drawer.css
+++ b/css/drawer.css
@@ -1,26 +1,44 @@
-.actions-container {
-	background-color: rgba(100, 100, 100, 0.3);
-	border-top-left-radius: 50%;
-	border-bottom-left-radius: 50%;
-	width: 100px;
+.drawer-container {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 10px;
+	justify-items: center;
+	position: fixed;
+	/* right: -170px; */
+	right: 0;
+	transition: right 2s linear;
+	border: 2px outset hsl(0, 0%, 40%);
+	border-top-left-radius: 8%;
+	border-bottom-left-radius: 8%;
+	padding: 12px 12px 12px 22px;
+	background-color: hsl(0, 0%, 14%);
+	box-shadow: 12px -12px 36px hsla(0, 0%, 23%, 0.9),
+		-12px 12px 36px hsla(0, 0%, 0%, 0.9),
+		inset 1px -2px 1px hsla(0, 0%, 28%, 0.7);
+	text-align: center;
 }
 
-.playPause {
-	position: relative;
-	cursor: pointer;
-	background-color: gray;
-	border-radius: 50%;
+.action {
+	display: block;
+	border: 2px outset rgb(100, 100, 100);
+	border-radius: 10px;
+	padding: 4px;
 	width: 80px;
-	height: 80px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	height: 34px;
+	background-color: hsl(0, 0%, 89%);
+	cursor: pointer;
+	font-size: 16px;
 }
 
-.playPause::before {
-	content: "";
-	position: absolute;
-	border-style: solid;
-	border-width: 20px 0 20px 35px;
-	border-color: transparent transparent transparent var(--font-secondary);
+label {
+	color: var(--font-white);
+	font-size: 18px;
+	font-weight: 600;
+}
+
+select.action {
+	text-align: center;
+}
+
+#playPauseButton {
 }
