--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 /* essentials */
 @import url("./reset.css");
 @import url("./base.css");
+@import url("./utils.css");
 
 /* application styles */
 @import url("./app.css");
